# Media-Player

./: MidiPlayer.py  SECURITY.md  about_box.ui  about_mediasource.ui  midi.ui  open_file.ui  open_file_dialog.ui  open_url_dialog.ui  playlist_dialog.ui  requirements.txt  time_travel_dialog.ui  update_resources.bat
.github/workflows/: codeql-analysis.yml
TerminalShell/: Cargo.toml
TerminalShell/src/: main.rs
TerminalShell/src/terminal_shell/: mod.rs
resources/: resources.qrc
src/: MidiReader.py  main.py  resources.py
src/database/: database_manager.py
src/gui/: dialogues.py  input_manager.py  music_player.py  ui_manager.py
src/gui/customization/: abstract_model.py  standard_model.py
src/midi/: MidiPlayer.py  MidiReader.py
src/radio/catalog/: parser.py  urls.txt
src/radio/catalog_api/: api.py
src/radio/catalog_ui/: radio_table_widget_item.py
src/shells/: abstract_shell.py  daemon_manager.py  shell_daemon.py
src/util/: ImageViewer.py  PlaylistWidgetItem.py  RoundButton.py  equalizer_bar.py  playlist_tree_item.py  round_button.py  utils.py
