[package]
name = "TerminalShell"
version = "0.1.0"
authors = ["PatriotRossii <patriotrossii2019@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0", features = ["blocking", "json"]}
serde_json = "1"
serde = {version = "1", features = ["derive"]}